--- a/Views/Article/List.cshtml
+++ b/Views/Article/List.cshtml
@@ -15,13 +15,32 @@
                             @Html.ActionLink(@article.Title, "Details", "Article", new { @id = article.Id }, null)
                         </h2>
                     </header>
-                    <p>
-                        @article.Content
+                    <p class="word-wrap">
+                        @if (article.Content.Length > 100)
+                        {
+                            @article.Content.Substring(0, 100) @:...
+                        }
+                        else
+                        {
+                            @article.Content
+                        }
                     </p>
-                    <footer class="pull-right">
-                        <small class="author">
-                            --author @article.Author.FullName
-                        </small>
+                    <footer>
+                        <div class="pull-left">
+                            <div class="pull-left">
+                                <img class="userPhoto" src="data:image/gif;base64,@Convert.ToBase64String(article.Author.UserPhoto)" />
+                            </div>
+                            <div class="pull-right author-name">
+                                <small class="author">
+                                    @article.Author.FullName
+                                </small>
+                            </div>
+                        </div>
+                        <div class="pull-right author-name">
+                            <small class="author">
+                                Date: @article.Date
+                            </small>
+                        </div>
                     </footer>
                 </article>
             </div>
