--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -10,6 +10,14 @@
     <h4>Change your account settings</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>User Name:<dt>
+        <dd><dd>
+        <dt>Profile Picture:</dt>
+        <dd>
+            <div>
+                <img class="profile-picture" src="@Url.Action("UserPhotos", "Home" )" />
+            </div>
+        </dd>
         <dt>Password:</dt>
         <dd>
             [
@@ -83,5 +91,5 @@
                     }
                 }*@
         </dd>
-    </dl>
+    </dd>
 </div>
