--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,10 +24,12 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="body-content">
+        
         @RenderBody()
-        <footer class="pull-right">
-            <p>&copy; @DateTime.Now.Year - Todorov's Blog</p>
+        <footer class="footer">
+            <hr />
+            <p class="pull-right">&copy; @DateTime.Now.Year - Todorov's Blog</p>
         </footer>
     </div>
 
