--- a/Views/Article/Create.cshtml
+++ b/Views/Article/Create.cshtml
@@ -1,4 +1,6 @@
-﻿@model ASP.NET_Blog.Models.Article
+﻿@using ASP.NET_Blog.Models;
+@model Tuple<Article, List<Category>>
+
 @{
     ViewBag.Title = "Create";
 }
@@ -12,18 +14,36 @@
             @Html.ValidationSummary("", new { @class = "text-danger" })
 
             <div class="form-group">
-                @Html.LabelFor(m => m.Title, new { @class = "control-label col-sm-4" })
+                @Html.LabelFor(m => m.Item1.Title, new { @class = "control-label col-sm-4" })
                 <div class="col-sm-4">
-                    @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
+                    @Html.TextBox("Title", "", new { @class = "form-control" })
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Content, new { @class = "control-label col-sm-4" })
+                <label class="control-label col-sm-4">Category</label>
                 <div class="col-sm-4">
-                    @Html.TextAreaFor(m => m.Content, new { @class = "form-control", @rows = "7" })
+                    <div class="dropdown">
+                        <select name="CategoryName" class="form-control">
+                            @foreach (var category in Model.Item2)
+                            {
+                                <option value="@category.CategoryName">@category.CategoryName</option>
+                            }
+                        </select>
+                    </div>
                 </div>
             </div>
-
+            <div class="form-group">
+                @Html.LabelFor(m => m.Item1.Tags, new { @class = "control-label col-sm-4" })
+                <div class="col-sm-4">
+                    @Html.TextBox("Tags", "(comma separated list)", new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Item1.Content, new { @class = "control-label col-sm-4" })
+                <div class="col-sm-4">
+                    @Html.TextArea("Content", new { @class = "form-control", @rows = "7" })
+                </div>
+            </div>
             <div class="form-group">
                 <div class="col-sm-4 col-sm-offset-4">
                     @Html.ActionLink("Cancel", "Index", "Article", null, new { @class = "btn btn-default" })
@@ -33,5 +53,3 @@
         }
     </div>
 </div>
-
-
