--- a/Views/Article/List.cshtml
+++ b/Views/Article/List.cshtml
@@ -6,52 +6,60 @@
 
 <div class="container">
     <div class="row">
-        @foreach (var article in Model.OrderByDescending(d => d.Date))
+        @if (Model.Count > 0)
         {
-            <div class="col-sm-6">
-                <article>
-                    <header>
-                        <h2>
-                            @Html.ActionLink(@article.Title, "Details", "Article", new { @id = article.Id }, null)
-                        </h2>
-                    </header>
-                    <p class="word-wrap">
-                        @if (article.Content.Length > 100)
-                        {
-                            @article.Content.Substring(0, 100) @:...
-                        }
-                        else
-                        {
-                            @article.Content
-                        }
-                    </p>
-                    <footer>
-                        <div class="pull-left">
+            foreach (var article in Model.OrderByDescending(d => d.Date))
+            {
+                <div class="col-sm-6">
+                    <article>
+                        <header>
+                            <h2>
+                                @Html.ActionLink(@article.Title, "Details", "Article", new { @id = article.Id }, null)
+                            </h2>
+                        </header>
+                        <p class="word-wrap">
+                            @if (article.Content.Length > 100)
+                            {
+                                @article.Content.Substring(0, 100) @:...
+                            }
+                            else
+                            {
+                                @article.Content
+                            }
+                        </p>
+                        <footer>
                             <div class="pull-left">
-                                @if (article.Author.UserPhoto == null)
-                                {
-                                    <img class="userPhoto" src="~/Content/default.jpg" />
-                                }
-                                else
-                                {
-                                    <img class="userPhoto" src="data:image/gif;base64,@Convert.ToBase64String(article.Author.UserPhoto)" />
-                                }
+                                <div class="pull-left">
+                                    @if (article.Author.UserPhoto == null)
+                                    {
+                                        <img class="userPhoto" src="~/Content/default.jpg" />
+                                    }
+                                    else
+                                    {
+                                        <img class="userPhoto" src="data:image/gif;base64,@Convert.ToBase64String(article.Author.UserPhoto)" />
+                                    }
+                                </div>
+                                <div class="pull-right author-name">
+                                    <small class="author">
+                                        @article.Author.FullName
+                                    </small>
+                                </div>
                             </div>
                             <div class="pull-right author-name">
                                 <small class="author">
-                                    @article.Author.FullName
+                                    Date: @article.Date
                                 </small>
                             </div>
-                        </div>
-                        <div class="pull-right author-name">
-                            <small class="author">
-                                Date: @article.Date
-                            </small>
-                        </div>
-                    </footer>
-                </article>
+                        </footer>
+                    </article>
+                </div>
+            }
+        }
+        else
+        {
+            <div class="well no-results text-center">
+                No articles were found.
             </div>
         }
     </div>
 </div>
-<hr />
