--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,94 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@using ASP.NET_Blog.Models;
+@model Tuple<List<Article>, List<Category>>
+
+@{
+    ViewBag.Title = "Home";
 }
 
-<h1>Index</h1>
+<div>
+    <div class="row">
+        <div class="container text-center">
+            <h4>Search by Tags</h4>
+            @using (Html.BeginForm("Search", "Article", FormMethod.Post, new { @class = "form-horizontal" }))
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary("", new { @class = "text-danger" })
+                <div class="row">
+
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                        <div class="input-group">
+                            <input type="text" name="Search" class="form-control" placeholder="Search by tags...">
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" type="submit">Search</button>
+                            </span>
+                        </div><!-- /input-group -->
+                    </div><!-- /.col-lg-6 -->
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div>
+                </div><!-- /.row -->
+            }
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-2">
+            <h3>Categories</h3>
+            @foreach (var category in Model.Item2)
+            {
+                <div class="row">
+                    <div class="col-md-10">
+                        @Html.ActionLink(@category.CategoryName, "List", "Article", new { @category = category.CategoryName }, null)
+                    </div>
+                </div>
+            }
+        </div>
+        <div class="col-md-10">
+            <h2>Newest Articles</h2>
+            @foreach (var article in Model.Item1)
+            {
+                <div class="col-sm-6">
+                    <article>
+                        <header>
+                            <h2>
+                                @Html.ActionLink(@article.Title, "Details", "Article", new { @id = article.Id }, null)
+                            </h2>
+                        </header>
+                        <p class="word-wrap">
+                            @if (article.Content.Length > 100)
+                            {
+                                @article.Content.Substring(0, 100) @:...
+                        }
+                            else
+                            {
+                                @article.Content
+                            }
+                        </p>
+                        <footer>
+                            <div class="pull-left">
+                                <div class="pull-left">
+                                    @if (article.Author.UserPhoto == null)
+                                    {
+                                        <img class="userPhoto" src="~/Content/default.jpg" />
+                                    }
+                                    else
+                                    {
+                                        <img class="userPhoto" src="data:image/gif;base64,@Convert.ToBase64String(article.Author.UserPhoto)" />
+                                    }
+                                </div>
+                                <div class="pull-right author-name">
+                                    <small class="author">
+                                        @article.Author.FullName
+                                    </small>
+                                </div>
+                            </div>
+                            <div class="pull-right author-name">
+                                <small class="author">
+                                    Date: @article.Date
+                                </small>
+                            </div>
+                        </footer>
+                    </article>
+                </div>
+            }
+        </div>
+    </div>
+</div>
