--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -12,9 +12,13 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin<span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li>@Html.ActionLink("Users", "List", "User")</li>
+                        <li>@Html.ActionLink("Categories", "Create", "Category")</li>
                     </ul>
                 </li>
             }
+            <li>
+                @Html.ActionLink("View", "List", "Article")
+            </li>
             <li>
                 @Html.ActionLink("Create", "Create", "Article")
             </li>
