remove line from footer adding DateTime to Comment

--- a/Views/Article/Details.cshtml
+++ b/Views/Article/Details.cshtml
@@ -67,6 +67,9 @@
                 <small class="author author-name">
                     @comment.FullName
                 </small>
+                <small>
+                    Posted on: @comment.Date
+                    </small>
             </div>
             <div class="row comment">
                 <p class="word-wrap">
