--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using ASP.NET_Blog.Models;
+﻿@using ASP.NET_Blog.Models
 @model Tuple<List<Article>, List<Category>>
 
 @{
@@ -20,7 +20,7 @@
                         <div class="input-group">
                             <input type="text" name="Search" class="form-control" placeholder="Search by tags...">
                             <span class="input-group-btn">
-                                <button class="btn btn-default" type="submit">Search</button>
+                                <button class="btn btn-success" type="submit">Search</button>
                             </span>
                         </div><!-- /input-group -->
                     </div><!-- /.col-lg-6 -->
