--- a/Views/Article/Create.cshtml
+++ b/Views/Article/Create.cshtml
@@ -35,7 +35,7 @@
             <div class="form-group">
                 @Html.LabelFor(m => m.Item1.Tags, new { @class = "control-label col-sm-4" })
                 <div class="col-sm-4">
-                    @Html.TextBox("Tags", "(comma separated list)", new { @class = "form-control" })
+                    @Html.TextBox("Tags", "", new { @class = "form-control" })
                 </div>
             </div>
             <div class="form-group">
