--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -10,9 +10,10 @@
     <h4>Change your account settings</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>User Name:
+        <dt>Email:
         <dt>
         <dd>
+            @User.Identity.Name
         <dd>
         <dt>Profile Picture:</dt>
         <dd>
