--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -6,6 +6,7 @@
         @Html.AntiForgeryToken()
 
         <ul class="nav navbar-nav navbar-right">
+            
             @if (User.IsInRole("Admin"))
             {
                 <li class="dropdown">
@@ -17,10 +18,10 @@
                 </li>
             }
             <li>
-                @Html.ActionLink("View", "List", "Article")
+                @Html.ActionLink("View All Posts", "List", "Article")
             </li>
             <li>
-                @Html.ActionLink("Create", "Create", "Article")
+                @Html.ActionLink("Create Post", "Create", "Article")
             </li>
             <ul class="nav navbar-nav">
                 <li>
